@@ -2181,7 +2181,7 @@ static int sdl_check_events(void) {
 
 #endif
 
-#ifdef CONFIG_GL_EGL_X11
+#if defined(CONFIG_GL_EGL_X11) || defined(CONFIG_GL_EGL_ANDROID)
 static EGLDisplay eglDisplay = EGL_NO_DISPLAY;
 static EGLSurface eglSurface = EGL_NO_SURFACE;
 
@@ -2191,7 +2191,16 @@ static EGLSurface eglSurface = EGL_NO_SURFACE;
  * So we have to use a non-portable way that in addition
  * might also return symbols from a different library
  * that the one providing the current context, great job!
+ * In addition the implementation of eglGetProcAddress
+ * on Galaxy S2 Android seems to actively return wrong
+ * pointers, it just gets better and better...
  */
+#ifdef CONFIG_GL_EGL_ANDROID
+static EGLNativeWindowType vo_window;
+#define eglGetProcAddress(a) 0
+#define mDisplay EGL_DEFAULT_DISPLAY
+EGLNativeWindowType android_createDisplaySurface(void);
+#endif
 static void *eglgpa(const GLubyte *name) {
   void *res = eglGetProcAddress(name);
   if (!res) {
@@ -2207,10 +2216,23 @@ static int setGlWindow_egl(MPGLContext *ctx)
   static const EGLint cfg_attribs[] = { EGL_NONE };
   static const EGLint ctx_attribs[] = { EGL_NONE };
   EGLContext *context = &ctx->context.egl;
-  Window win = vo_window;
   EGLContext new_context = NULL;
   EGLConfig eglConfig;
   int num_configs;
+#ifdef CONFIG_GL_EGL_ANDROID
+  EGLint w, h;
+  if (vo_window) {
+    eglQuerySurface(eglDisplay, eglSurface, EGL_WIDTH, &w);
+    eglQuerySurface(eglDisplay, eglSurface, EGL_HEIGHT, &h);
+    vo_screenwidth = vo_dwidth = w;
+    vo_screenheight = vo_dheight = h;
+    return SET_WINDOW_OK;
+  }
+  if (!vo_window)
+    vo_window = android_createDisplaySurface();
+  if (!vo_window)
+    return SET_WINDOW_FAILED;
+#endif
   if (eglDisplay == EGL_NO_DISPLAY) {
     eglDisplay = eglGetDisplay(mDisplay);
     if (eglDisplay == EGL_NO_DISPLAY) {
@@ -2230,7 +2252,7 @@ static int setGlWindow_egl(MPGLContext *ctx)
   if (!eglChooseConfig(eglDisplay, cfg_attribs, &eglConfig, 1, &num_configs) ||
       num_configs != 1)
     return SET_WINDOW_FAILED;
-  eglSurface = eglCreateWindowSurface(eglDisplay, eglConfig, win, NULL);
+  eglSurface = eglCreateWindowSurface(eglDisplay, eglConfig, vo_window, NULL);
   if (eglSurface == EGL_NO_SURFACE)
     return SET_WINDOW_FAILED;
 
@@ -2241,8 +2263,14 @@ static int setGlWindow_egl(MPGLContext *ctx)
     return SET_WINDOW_FAILED;
 
   // set new values
-  vo_window = win;
+#ifdef CONFIG_GL_EGL_X11
   vo_x11_update_geometry();
+#else
+  eglQuerySurface(eglDisplay, eglSurface, EGL_WIDTH, &w);
+  eglQuerySurface(eglDisplay, eglSurface, EGL_HEIGHT, &h);
+  vo_screenwidth = vo_dwidth = w;
+  vo_screenheight = vo_dheight = h;
+#endif
   *context = new_context;
 
   getFunctions(eglgpa, eglQueryString(eglDisplay, EGL_EXTENSIONS));
@@ -2289,6 +2317,10 @@ static int dummy_check_events(void) {
   return 0;
 }
 
+static void dummy_fullscreen(void) {
+  vo_fs = !vo_fs;
+}
+
 static void dummy_update_xinerama_info(void) {
   if (vo_screenwidth <= 0 || vo_screenheight <= 0) {
     mp_msg(MSGT_VO, MSGL_ERR, "You must specify the screen dimensions "
@@ -2309,6 +2341,8 @@ int init_mpglcontext(MPGLContext *ctx, enum MPGLType type) {
     if (res) return res;
     res = init_mpglcontext(ctx, GLTYPE_SDL);
     if (res) return res;
+    res = init_mpglcontext(ctx, GLTYPE_EGL_ANDROID);
+    if (res) return res;
     res = init_mpglcontext(ctx, GLTYPE_EGL_X11);
     return res;
   }
@@ -2318,6 +2352,7 @@ int init_mpglcontext(MPGLContext *ctx, enum MPGLType type) {
   ctx->swapGlBuffers = swapGlBuffers_dummy;
   ctx->update_xinerama_info = dummy_update_xinerama_info;
   ctx->check_events = dummy_check_events;
+  ctx->fullscreen = dummy_fullscreen;
   ctx->type = type;
   switch (ctx->type) {
 #ifdef CONFIG_GL_WIN32
@@ -2352,6 +2387,13 @@ int init_mpglcontext(MPGLContext *ctx, enum MPGLType type) {
     ctx->check_events = sdl_check_events;
     ctx->fullscreen = vo_sdl_fullscreen;
     return vo_sdl_init();
+#endif
+#ifdef CONFIG_GL_EGL_ANDROID
+  case GLTYPE_EGL_ANDROID:
+    ctx->setGlWindow = setGlWindow_egl;
+    ctx->releaseGlContext = releaseGlContext_egl;
+    ctx->swapGlBuffers = swapGlBuffers_egl;
+    return 1;
 #endif
 #ifdef CONFIG_GL_EGL_X11
   case GLTYPE_EGL_X11:
